test/errors/assert/table.yasl

let x = {
    .f: fn() {
        assert false
    },
    .g: fn() {
        echo false
    } }


x->f()
